syntax = "proto3";

package gateway;

option go_package = "github.com/VipWW/malgo-c2/services/common/services/gateway";

service GatewayService {
  rpc RegisterNewSession(RegisterNewSessionRequest) returns (EmptyResponse) {} // Synchronous
  rpc SessionHeartbeat(SessionHeartbeatRequest) returns (EmptyResponse) {} // Asynchronous
  rpc CommandInfo(CommandInfoRequest) returns (CommandInfoResponse) {} // Synchronous
  rpc CommandDetailsChunk(CommandDetailsChunkRequest) returns (CommandDetailsChunkResponse) {} // Synchronous
}

message RegisterNewSessionRequest {
    string session_id = 1;
    string project_id = 2;
}

message SessionHeartbeatRequest {
    string session_id = 1;
}

message CommandInfoRequest {
    string session_id = 1;
}

message CommandInfoResponse {
    string command_id = 1;
    string type = 2;
    string command_length = 3;
}

message CommandDetailsChunkRequest {
    string command_id = 1;
    string offset = 2;
    string length = 3;
}

message CommandDetailsChunkResponse {
    string data = 1;
    bool is_last_chunk = 2;
}

message EmptyResponse {}